# weekly-cs-pills

./: .gitignore  81by81.txt  README.md  sudoku.cc  sudoku_input.txt
advent_of_code/: advent_of_code.ipynb  day3_part2.py
advent_of_code/2024/: day2  day2.cpp
code.ai/: neural_net.rb
codility/: dist_bn_frogs_inp.txt  max_dist_bn_frogs.cc
cpp-sock/: Address.cc  Address.h  CMakeLists.txt  Server.h  Socket.cc  Socket.h  diary.txt  getaddrinfo.cc  test.cc
hacker-rank/: .gitignore  array_rotate.cc  input-jim-orders.txt  io.cc  jim_and_the_orders.cc  lower_bound.cc  lower_bound.cc~  matrix_rotation_algo.cc  output-jim-orders.txt  playing_with_numbers.cc  pwn_input08.txt  saveher  saveprincess.cc
hacker-rank/world-code-sprint/: CMakeLists.txt  input10.txt  input3.txt  sdrive  self_driving_bus.cc  self_driving_bus2.cc
haskell/: even_sum.hs  first.hs
misc_coding_chllenges/: Djikstra.cc  FirstNonRepeatingCharInAStream.cc  KClosestPointsToTheOrigin.cc  KUniqueCharString.cc  LRU.cc  LetterCombinationOfPhoneNumber.cc  MajorityElement.cc  MeetingRooms.cc  ValidTree.cc  VerticalOrder.cc  anagram_cluster.cc  binary_search.cc  bits.cc  bst.cc  compoundWords.cc  fib.cc  findLargestMultiple.cc  intersection.cc  josephus.cc  min_difference.cc  prime.cc
script-ground/: AtomSpace.rb  calc.rb  eval.rb  graphql.rb  normalize.rb  number_to_alphabet.rb  perceptr_grad_descent.rb
soduku/src/: CMakeLists.txt  README.md  Reader.cc  Reader.h  Solver.cc  Solver.h
